--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install coveralls
 
 script:
-  - coverage run test_tictac.py
+  - coverage run src/test_tictac.py
 
 after_success:
   - coveralls
